deploy/overlays/local/test/components/ehrbase-ingress/ehrbase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ehrbase-ingress
  namespace: dh-health
spec:
  ingressClassName: nginx
  rules:
  - host: ehrbase.test.local.dh.unimaas.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-ehrbase
            port:
              number: 8080
